# screaming-frog-api

./: .gitignore  API_REPO_SYNC_PLAN.md  CHANGELOG.md  MAPPING_BACKLOG.md  README.md  TODO.md  methods.md  overview.md  pyproject.toml
examples/: broken_links_report.py  crawl_diff.py  title_meta_audit.py
features.d/: 00_index.md  01_core_api.md  02_sources_and_loaders.md  03_backends.md  04_tabs_and_filters.md  05_links.md  06_diff.md  07_escape_hatches.md  08_cli_exports.md  09_db_packaging.md  10_config_patches.md  11_schema_mapping.md  12_limits_and_gaps.md  13_golden_path_examples.md  README.md
schemas/: inlinks_mapping_missing.md  inlinks_mapping_nulls.md  mapping_nulls.md
screamingfrog/: __init__.py  crawl.py
scripts/: README.md  suggest_mappings.py
tests/: test_audit_helpers.py  test_backend_cleanup.py  test_backends.py  test_chain_methods.py  test_cli_exports.py  test_config_patches.py  test_derby_blob_filters.py  test_derby_filter_behaviors.py  test_derby_internal_mapping.py  test_derby_special_tabs.py  test_derby_streaming.py  test_diff.py  test_duckdb_backend.py  test_duckdb_loaders.py  test_escape_hatches.py  test_filters.py  test_hybrid_backend_filters.py  test_internal_page.py  test_link_type_labels.py  test_list_crawls.py  test_live_smoke.py  test_loaders.py  test_mapping_inlinks_filtered.py  test_mapping_links.py  test_mapping_progress.py  test_sfconfig_adapter.py  test_url_normalization.py  test_views.py
use cases/: INDEX_BY_PERSONA.md  INDEX_BY_WORKFLOW.md  MASTER_LIST.md  README.md  advanced-analysis.md  affiliate-and-review-sites.md  agents-mcp-and-ai.md  (+38 more)
(+746 files in other folders)
