[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screamingfrog"
version = "0.2.2"
description = "Python library for working with Screaming Frog SEO Spider crawl data"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Antonio"}
]
requires-python = ">=3.10"
keywords = ["screaming-frog", "seo", "crawler", "crawl", "analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "duckdb>=1.5.0",
  "jaydebeapi>=1.2.3",
  "JPype1>=1.5.0",
  "sf-config-builder>=0.1.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0"
]
derby = [
  "jaydebeapi>=1.2.3",
  "JPype1>=1.5.0"
]
config = [
  "sf-config-builder>=0.1.6"
]
duckdb = [
  "duckdb>=1.5.0"
]
alpha = [
  "duckdb>=1.5.0",
  "jaydebeapi>=1.2.3",
  "JPype1>=1.5.0",
  "sf-config-builder>=0.1.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["screamingfrog*"]

[tool.setuptools.package-data]
screamingfrog = [
  "vendor/derby/*.jar",
  "vendor/derby/LICENSE",
  "vendor/derby/NOTICE",
  "config/*.txt",
  "resources/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
